--- a/pos_bag_charges/static/description/index.html
+++ b/pos_bag_charges/static/description/index.html
@@ -45,8 +45,22 @@
 			<p class="oe_slogan">
 				This odoo apps apply bag charges on pos you need to tick "Allow Bag Charges" in pos configuration, after tick this bag charges category appear in which you need to select pos bag.
 			</p>
+			<p class="oe_slogan" style="color: #49a3fe;font-size: 35px;font-style: italic;font-weight:bolder;">Multi Language Translation Available</p>
+			<p class="oe_slogan" style="color: #49a3fe;font-size: 25px;font-style: italic;font-weight:bolder;"> We have added Translation using google translate for English (US), Arabic, French / Français, Spanish / Español and Dutch / Nederlands, if you want to change translation terms or add new translation provide us translation, we will add that without any cost.
+			</p>
 		</div>
 	</div>
+	<div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+            <div class="Language" style="text-align:center">
+               <img title="English" alt="English" style="margin:10px 10px" src="languages/English.png">
+               <img title="Arabic" alt="Arabic" style="margin:10px 10px" src="languages/Arabic.png">
+               <img title="French" alt="French" style="margin:10px 10px" src="languages/French.png">
+               <img title="Spanish" alt="Spanish" style="margin:10px 10px" src="languages/Spanish.png">
+               <img title="Dutch" alt="Dutch" style="margin:10px 10px" src="languages/Dutch.png">
+            </div>
+        </div>
+    </div>
 </section>
 
 <section class="oe_container lead bi_features">
@@ -144,32 +158,32 @@
 		</div>
 		<div class="row col-sm-12" style="margin-left: 1%;padding: 1% 8%;">
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/13.0/pos_home_delivery/">
+				<a href="https://apps.odoo.com/apps/modules/15.0/pos_home_delivery/">
 					<img class="img img-responsive" src="related/pos_home.png" style="width: 100%;"/>
 				</a>
 			</div>
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/13.0/pos_loyalty_odoo/">
+				<a href="https://apps.odoo.com/apps/modules/15.0/pos_loyalty_odoo/">
 					<img class="img img-responsive" src="related/1.png" style="width: 100%;"/>
 				</a>
 			</div>
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/13.0/pos_membership_odoo/">
+				<a href="https://apps.odoo.com/apps/modules/15.0/pos_membership_odoo/">
 					<img class="img img-responsive" src="related/2.png" style="width: 100%;"/>
 				</a>
 			</div>
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/13.0/bi_pos_lock/">
+				<a href="https://apps.odoo.com/apps/modules/15.0/bi_pos_lock/">
 					<img class="img img-responsive" src="related/3.png" style="width: 100%;"/>
 				</a>
 			</div>
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/13.0/pos_orders_list/">
+				<a href="https://apps.odoo.com/apps/modules/15.0/pos_orders_list/">
 					<img class="img img-responsive" src="related/4.png" style="width: 100%;"/>
 				</a>
 			</div>
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/13.0/pos_orders_reprint/">
+				<a href="https://apps.odoo.com/apps/modules/15.0/pos_orders_reprint/">
 					<img class="img img-responsive" src="related/5.png" style="width: 100%;"/>
 				</a>
 			</div>
@@ -186,32 +200,32 @@
 		</div>
 		<div class="row col-sm-12" style="margin-left: 1%;padding: 1% 8%;">
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/13.0/pos_orders_all/">
+				<a href="https://apps.odoo.com/apps/modules/15.0/pos_orders_all/">
 					<img class="img img-responsive" src="demanded/all_in_one_pos.png" style="width: 100%;"/>
 				</a>
 			</div>
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/13.0/bi_customer_overdue_statement/">
+				<a href="https://apps.odoo.com/apps/modules/15.0/bi_customer_overdue_statement/">
 					<img class="img img-responsive" src="demanded/customer_overdue.png" style="width: 100%;"/>
 				</a>
 			</div>
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/13.0/generic_excel_reports/">
+				<a href="https://apps.odoo.com/apps/modules/15.0/generic_excel_reports/">
 					<img class="img img-responsive" src="demanded/generic_excel_report.png" style="width: 100%;"/>
 				</a>
 			</div>
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/13.0/sales_commission_generic/">
+				<a href="https://apps.odoo.com/apps/modules/15.0/sales_commission_generic/">
 					<img class="img img-responsive" src="demanded/sale_commision.png" style="width: 100%;"/>
 				</a>
 			</div>
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/13.0/bi_generic_import/">
+				<a href="https://apps.odoo.com/apps/modules/15.0/bi_generic_import/">
 					<img class="img img-responsive" src="demanded/bi_generic_import.png" style="width: 100%;"/>
 				</a>
 			</div>
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/13.0/branch/">
+				<a href="https://apps.odoo.com/apps/modules/15.0/branch/">
 					<img class="img img-responsive" src="demanded/branch.png" style="width: 100%;"/>
 				</a>
 			</div>
